syntax = "proto3";

package PAYMENT_SERVICE;

service PaymentService {
  rpc CreatePayment(CreatePaymentRequest) returns (PaymentResponse);
}

//==================== CreatePayment ====================//
message CreatePaymentRequest {
  optional string processId = 1;
  string id = 2;
  string code = 3;
  string userId = 4;
  repeated string orderId = 5;
  string method = 6;
  string status = 7;
  int32 amount = 8;
}

message PaymentResponse {
  string id = 1;
  string code = 2;
  string userId = 3;
  string orderId = 4;
  string method = 5;
  string status = 6;
  int32 amount = 7;
  string createdById = 8;
  string updatedById = 9;
  string deletedById = 10;
  string deletedAt = 11;
  string createdAt = 12;
  string updatedAt = 13;
}

